--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <li><a href="./netbsd/conoha.html">ConoHa VPS上でNetBSDを動かす</a></li>
 <li><a href="./introduction/npf.html">ファイアウォール&mdash;&mdash;npf</a></li>
 <li><a href="./netbsd/zfs.html">ZFS on NetBSD</a></li>
+<li><a href="./netbsd/zabbix.html">ZabbixによるNetBSDシステム監視</a></li>
 </ul>
 <h3 id="coding">コーディング</h3>
 <ul>
