Change example's agent Hostname to default

--- a/netbsd/zabbix.html
+++ b/netbsd/zabbix.html
@@ -97,7 +97,7 @@ php_fpm=YES</b></code></pre>
 <pre><code><b>LogFile=/var/log/zabbix/zabbix_agentd.log
 Server=127.0.0.1
 ServerActive=127.0.0.1
-Hostname=ThinkPad X230i</b></code></pre>
+Hostname=Zabbix server</b></code></pre>
 
 <p>設定後はZabbix Agentデーモンを実行してください。</p>
 
