Fix mistake that invalid referece to figure

--- a/netbsd/zabbix.html
+++ b/netbsd/zabbix.html
@@ -25,7 +25,7 @@
 <h2 id="zabbix">Zabbixについて</h2>
 <p><a href="https://www.zabbix.com">Zabbix</a>はZabbix LLC.という企業主体で開発されているFLOSS（GPLv2）の監視ソフトウェアです。バックエンドはC言語、フロントエンドはPHPで実装されています[<a id="ragent2" href="#agent2">1</a>]。</p>
 
-<p>Zabbixの監視システムをおおまかに図にすると図1-1のようになります。</p>
+<p>Zabbixの監視システムをおおまかに図にすると図1のようになります。</p>
 
 <figure style="text-align:center;">
 <img src="./images/zabbix_001.png" alt="zabbix basic monitoring system">
