Add about shunit2 to shellscript coding style

--- a/coding/shellscript.html
+++ b/coding/shellscript.html
@@ -7,14 +7,15 @@
 <title>e-yuuki.org</title>
 </head>
 <body><div class="tiny">
-<h1>私家版ShellScript Coding Style</h1>
+<h1>私家版シェルスクリプト Coding Style</h1>
 <hr>
-<p>ShellScriptを書くさいに僕が気をつけていることをまとめます。この文書は「シェル芸」や「ワンライナー」といった技芸・難読化には触れません。</p>
+<p>シェルスクリプトを書くときに僕が気をつけていることをまとめます。この文書は「シェル芸」や「ワンライナー」といった技芸・難読化には触れません。</p>
 
 <ul>
-<li><a href="#shellcoding">ShellScriptを諦めるとき</a></li>
+<li><a href="#shellcoding">シェルスクリプトを諦めるとき</a></li>
 <li><a href="#bsh">Bourne Shell</a></li>
 <li><a href="#shellcheck">静的解析ツール ShellCheck</a></li>
+<li><a href="#shunit2">ユニットテストフレームワーク shunit2</a></li>
 <li><a href="#indent">インデント・1行あたりの文字数</a></li>
 <li><a href="#function">関数名</a></li>
 <li><a href="#comment">コメント</a></li>
@@ -22,12 +23,12 @@
 <li><a href="#posix">POSIX</a></li>
 </ul>
 
-<h2 id="shellcoding">ShellScriptを諦めるとき</h2>
-<p>ShellScriptでプログラムを書く利点はいくつも考えられます。POSIXで定義されたコマンド群のみを使って書けばすべてのUnix上で動作するソフトウェアができます。おおよその伝統的なUnixコマンドはC言語で実装されていますが、それらを呼び出しパイプとリダイレクトで糊付けするShellScriptもまた高速です。手動でおこなっていた作業を自動化するさい、ShellScriptならひとつひとつの手順を上から順に貼り付けていくだけでおおよそは完了してしまいます。</p>
+<h2 id="shellcoding">シェルスクリプトを諦めるとき</h2>
+<p>シェルスクリプトでプログラムを書く利点はいくつも考えられます。POSIXで定義されたコマンド群のみを使って書けばすべてのUnix上で動作するソフトウェアができます。おおよその伝統的なUnixコマンドはC言語で実装されていますが、それらを呼び出しパイプとリダイレクトで糊付けするシェルスクリプトもまた高速です。手動でおこなっていた作業を自動化するさい、シェルスクリプトならひとつひとつの手順を上から順に貼り付けていくだけでおおよそは完了してしまいます。</p>
 
-<p>一方ShellScriptで書かれたコードは読みづらく、この一点こそが小規模以上なShellScript実装のソフトウェアを諦める理由でもあります。一度書けばどのような環境でも動くことは、一度書けば二度とコードを読まなくてもいいことと同等ではないのです。保守をしなくてもいい理由にもなりません。使い捨てのコードでない限り、誰かがそのコードを一部分でも読むときがやってくるのです。さらに、その誰かとは二ヶ月後の自分である可能性が大です。</p>
+<p>一方シェルスクリプトで書かれたコードは読みづらく、この一点こそが中・大規模以上なシェルスクリプト実装のソフトウェアを諦める理由でもあります。一度書けばどのような環境でも動くことは、一度書けば二度とコードを読まなくてもいいことと等価ではないのです。保守をしなくてもいい理由にもなりません。使い捨てのコードでない限り、誰かがそのコードを一行でも読むときがやってくるのです。さらに、その誰かとは二ヶ月後の自分である可能性が大です。</p>
 
-<p><a href="https://github.com/google/styleguide/blob/gh-pages/shell.xml">GoogleのShellScriptスタイルガイド</a>を読んでまとめてみた技術系記事はインターネット上で多数公開されています。XML形式の文書を英語で読みたくない方はそれらを参考にしてください。このスタイルガイドでは冒頭に、ShellScriptは小さなユーティリティか簡単なラッパーを書きたいときのみ使うこと（"Shell should only be used for small utilities or simple wrapper scripts."）、ShellScriptのコードが100行を超える規模になったのであれば、代わりにPythonで書き直すべきであること（"If you are writing a script that is more than 100 lines long, you should probably be writing it in Python instead."）が指摘されています。これは正論です。むしろ僕としては50行を超えた時点でShellScript以外のスクリプト系言語で書きたいところです。</p>
+<p><a href="https://github.com/google/styleguide/blob/gh-pages/shell.xml">Googleのシェルスクリプトスタイルガイド</a>を読んでまとめてみた技術系記事はインターネット上で多数公開されています。XML形式の文書を英語で読みたくない方はそれらを参考にしてください。このスタイルガイドでは冒頭に、シェルスクリプトは小さなユーティリティか簡単なラッパーを書きたいときのみ使うこと（"Shell should only be used for small utilities or simple wrapper scripts."）、シェルスクリプトのコードが100行を超える規模になったのであれば、代わりにPythonで書き直すべきであること（"If you are writing a script that is more than 100 lines long, you should probably be writing it in Python instead."）が指摘されています。これは正論です。むしろ僕としては50行を超えそうな時点でPythonで書きたいところです。</p>
 
 <p>以下の事項のうちひとつでも該当するのであれば、50行を超えた時点で別の言語で実装しましょう。</p>
 
@@ -38,14 +39,14 @@
 </ul>
 
 <h2 id="bsh">Bourne Shell</h2>
-<p>ShellScriptに使う言語はBourne Shellです。Shebangは<code>#!/bin/sh</code>です。RHELかUbuntuでしか動かす予定がないのであればBashを使っても構いませんが、後述するPOSIX準拠ではなくなります。</p>
+<p>シェルスクリプトに使う言語はBourne Shellです。Shebangは<code>#!/bin/sh</code>です。RHELかUbuntuでしか動かす予定がないのであればBashを使っても構いませんが、後述するPOSIX準拠ではなくなります。</p>
 
-<p>標準でBashがインストールされていないOSも存在することだけは頭の片隅に入れておくといいでしょう。</p>
+<p>標準でBashがインストールされていないOSも存在することだけは頭の片隅に入れておくといいでしょう。たとえばNetBSDやAIXなどです。</p>
 
 <h2 id="shellcheck">静的解析ツール ShellCheck</h2>
-<p><a href="https://www.shellcheck.net/">ShellCheck</a>はHaskellで実装された、ShellScriptの静的解析ツールです。基本的にはShellCheckの指示にしたがってコードを書きます。よくある警告は変数を二重引用符で囲わないときに出る<a href="https://github.com/koalaman/shellcheck/wiki/SC2086">SC2086</a>でしょう。どのように修正すればいいかは<a href="https://github.com/koalaman/shellcheck/wiki/">GitHubのWiki</a>に詳しく書いてあります。警告が出たときはエラーコード（SCxxxx）のページを参照してください。</p>
+<p><a href="https://www.shellcheck.net/">ShellCheck</a>はHaskellで実装された、シェルスクリプトの静的解析ツールです。基本的にはShellCheckの指示にしたがってコードを書きます。よくある警告は変数を二重引用符で囲わないときに出る<a href="https://github.com/koalaman/shellcheck/wiki/SC2086">SC2086</a>でしょう。どのように修正すればいいかは<a href="https://github.com/koalaman/shellcheck/wiki/">GitHubのWiki</a>に詳しく書いてあります。警告が出たときはエラーコード（SCxxxx）のページを参照してください。</p>
 
-<p>しかし、なにも考えずなんでもかんでも変数を二重引用符で囲ってしまうと、それはそれでShellScriptが意図しない動作をする可能性もあります。コーディング中の動作確認を頻繁におこないましょう。</p>
+<p>しかし、なにも考えずなんでもかんでも変数を二重引用符で囲ってしまうと、それはそれでシェルスクリプトが意図しない動作をする可能性もあります。コーディング中の動作確認を頻繁におこないましょう。</p>
 
 <pre><code><b>#!/bin/sh
 # 典型的な例
@@ -70,10 +71,15 @@ done
 # c
 # d</b></code></pre>
 
-<h2 id="indent">インデント・1行あたりの文字数</h2>
-<p>インデントはスペース4つです。Googleのスタイルでは2つですが、僕はインデントが浅すぎると目で見たときにソースコードの構造がはっきりと分からないので4つにしています。8つは長すぎました。</p>
+<h2 id="shunit2">ユニットテストフレームワーク shunit2</h2>
+<p><a href="https://github.com/kward/shunit2">shunit2</a>はシェルスクリプトのためのユニットテストフレームワークです。どのように使うかはREADMEを読めばおおよそ理解できます。</p>
 
-<p>コードは1行あたり80文字で収めるよう努力します。ここで「努力する」と書いたのは、長い文字列を処理するときにどうしても80文字を超えてしまうこともあるからです。1行に何百文字も書いてしまうと開発者の環境によっては文字が折り返しすぎてコードの見栄えが汚くなることもあります。</p>
+<p>シェルスクリプトであるにもかかわらずテスト駆動開発を実践したいと思うほど大規模なコードは書かないかもしれません。しかしテストケースを考えてユニットテストを残しながらコーディングすると、後から関数の動作を見直したいときや、変数の考慮すべきパターンが増えたときに便利です。</p>
+
+<h2 id="indent">インデント・1行あたりの文字数</h2>
+<p>インデントはスペース4つです。Googleのスタイルでは2つですが、インデントが浅すぎると目で見たときにソースコードの構造がはっきりと分かりません。僕は4つにしています。一方8つは長すぎました。</p>
+
+<p>1行に何百文字も書いてしまうと、ディスプレイの大きさによっては文字が折り返してしまいコードの見栄えが汚くなることもあります。僕の場合、コードは1行あたり80文字で収めるよう努力します。ここで「努力する」と書いたのは、長い文字列を処理するときにどうしても80文字を超えてしまうこともあるからです。100文字は越えないようにしています。</p>
 
 <p>パイプでコマンドの出力をつなげていくと80文字を超えてしまう場合もあります。そのときは複数行に分けて書きます。</p>
 
@@ -108,7 +114,7 @@ __function()
 }</b></code></pre>
 
 <h2 id="comment">コメント</h2>
-<p>関数定義のさいは与えられる引数と期待する戻り値についてコメントを書きます。ShellScriptは読みにくいため、このようにコメントを書いておくとコードを読まなくても予期される動作を把握できます。</p>
+<p>以前は関数定義のさいに与えられる引数と期待する戻り値についてコメントを書いていました。理由は、シェルスクリプトは読みにくいため、コメントを書いておくとコードを読まなくても予期される動作を把握できるからです。</p>
 
 <pre><code><b># _function -- Short description of the function
 #
@@ -122,8 +128,10 @@ _function()
     # process ...
 }</b></code></pre>
 
+<p>しかし、最近はコメントにかける情熱を関数名を考えることへ注ぐようにしています。実装とコメントの食い違いにより「嘘のコメント」がいつの間にか生まれてしまうリスクを考慮しています。嘘のコメントはコード中のコメントの割合が多ければ多いほど発生しやすくなります。</p>
+
 <h2 id="err">エラー処理</h2>
-<p>エラー処理は厳格におこないます。ShellScriptは他の高級なプログラミング言語よりも、どの箇所でエラーが発生したのか把握が難しいからです。ファイルを開くとき・ファイルを削除するとき・ディレクトリを移動するとき……などは必ずそのファイルやディレクトリが存在するかを<code>test(1)</code>で確認します。またコマンドの実行が成功・失敗したかどうかの判定はコマンドの戻り値を使います。</p>
+<p>エラー処理は厳格におこないます。シェルスクリプトは他の高級なプログラミング言語よりも、どの箇所でエラーが発生したのか把握が難しいからです。ファイルを開くとき・ファイルを削除するとき・ディレクトリを移動するとき……などは必ずそのファイルやディレクトリが存在するかを<code>test(1)</code>で確認します。またコマンドの実行が成功・失敗したかどうかの判定はコマンドの戻り値を使います。</p>
 
 <p>エラーメッセージを表示して<code>exit 1</code>する関数を定義しておくと便利です。</p>
 
@@ -166,11 +174,11 @@ ERRORMESSAGE
 }</b></code></pre>
 
 <h2 id="posix">POSIX</h2>
-<p>POSIXはUnix OSの標準規格です。POSIXではShellコマンドも定義されています。<a href="https://pubs.opengroup.org/onlinepubs/9699919799/idx/utilities.html">Utilities</a>に書かれているコマンドのみを使ってShellScriptを書けば、POSIX準拠の移植性の高いShellScriptであると言えます。</p>
+<p>POSIXはUnix OSの標準規格です。POSIXではShellコマンドも定義されています。<a href="https://pubs.opengroup.org/onlinepubs/9699919799/idx/utilities.html">Utilities</a>に書かれているコマンドのみを使ってシェルスクリプトを書けば、POSIX準拠の移植性の高いシェルスクリプトであると言えます。</p>
 
-<p>書き捨てるShellScriptか、実行環境が限定されているShellScriptであればPOSIX準拠を考える必要はありません。しかし小規模かつ複数の環境での実行を想定する場合や、実行環境が商用Unixかつその環境でプログラミングやテストをするのが難しい（本番環境だからなるべく下手なことをしたくない、外部のサービスを契約して1日単位でレンタルする必要があり開発には向かない、……など）場合は、POSIXにしたがってコーディングすることでコードの動作を保証できます。</p>
+<p>書き捨てるシェルスクリプトか、実行環境が限定されているシェルスクリプトであればPOSIX準拠を考える必要はありません。しかし小規模かつ複数の環境での実行を想定する場合や、実行環境が商用Unixかつその環境でプログラミングやテストをするのが難しい（本番環境だからなるべく下手なことをしたくない、外部のサービスを契約して1日単位でレンタルする必要があり開発には向かない、……など）場合は、POSIXにしたがってコーディングすることでコードの動作を保証できます。</p>
 
-<p>巨大なソフトウェアをShellScriptで実装しようというモチベーションのひとつには、POSIX準拠の実装による移植性の担保があるように思えます。しかし前述した理由により、優れた移植性による恩恵よりもコードリーディングの難しさによる問題のほうがよほど目立つでしょう。僕は推奨しません。</p>
+<p>巨大なソフトウェアをシェルスクリプトで実装しようというモチベーションのひとつには、POSIX準拠の実装による移植性の担保があるように思えます。しかし前述した理由により、優れた移植性による恩恵よりもコードリーディングの難しさによる問題のほうがよほど目立つでしょう。僕は推奨しません。</p>
 <hr>
 <footer>
 <div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div>
