Add HTML plugin for textlint

--- a/coding/html.html
+++ b/coding/html.html
@@ -122,7 +122,8 @@ textlint-rule-ja-hiragana-fukushi
 textlint-rule-ja-hiragana-hojodoushi
 @textlint-ja/textlint-rule-no-insert-dropping-sa
 textlint-rule-prefer-tari-tari
-textlint-rule-preset-jtf-style"
+textlint-rule-preset-jtf-style
+textlint-plugin-html"
 
 for package in $targets; do
   $cmd "$cmd_opt" "$package"
