--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <li><a href="./introduction/npf.html">ファイアウォール&mdash;&mdash;npf</a></li>
 <li><a href="./netbsd/zfs.html">ZFS on NetBSD</a></li>
 <li><a href="./netbsd/zabbix.html">ZabbixによるNetBSDシステム監視</a></li>
+<li><a href="./netbsd/homebuilt_computer.html">NetBSDビルド環境を自作パソコンで作る</a></li>
 </ul>
 <h3 id="coding">コーディング</h3>
 <ul>
