--- a/netbsd/homebuilt_computer.html
+++ b/netbsd/homebuilt_computer.html
@@ -133,7 +133,7 @@
 
 <img src="./images/homebuilt_002.jpg" alt="parts">
 
-<p>そういうわけで僕の初自作パソコンはソフトの部分で失敗というか妥協に終わってしまったのですが、それでもデスクトップ環境はいつも以上に快適に動いていますし、ビルドも従来よりかなり速いためそこそこ満足しています。</p>
+<p>そういうわけで僕の初自作パソコンはソフトの部分で失敗というか妥協に終わってしまったのですが、それでもデスクトップ環境はいつも以上に快適に動いていますし、ビルドも従来よりかなり速いためそこそこ満足しています。NetBSDはクロスビルドができるので、OSがNetBSDでなくてもNetBSDのビルド自体はできてしまいます。</p>
 
 <p>パーツの組み立てはプラスドライバ一本で終わり、思っていたよりも簡単でした。一番難しいと感じた作業を挙げるとすれば、フロントパネル用のピンヘッダをマザーボードに取り付ける作業でしょうか。マザーボードの説明書とにらめっこしながらどこになにを挿すか慎重に探りました。</p>
 
