--- a/netbsd/homebuilt_computer.html
+++ b/netbsd/homebuilt_computer.html
@@ -32,7 +32,7 @@
 <table>
 <thead><tr><td>構成要素</td><td>名前</td></tr></thead>
 <tbody>
-<tr><td>CPU</td><td>AMD Ryzen 3600X</td>
+<tr><td>CPU</td><td>AMD Ryzen 3600X</td></tr>
 <tr><td>マザーボード</td><td>ASUS TUF B450-PRO GAMING</td></tr>
 <tr><td>電源</td><td>SILVER STONE ST75F-GS</td></tr>
 <tr><td>CPUクーラ</td><td>noctua NN-U12A</td></tr>
