Fix japanese mis

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
 <div class="text"><p><b>注意</b></p><p>注意や警告を示します。</p></div>
 </div>
 
-<p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法であろうとも、引用した文章がBoldやItalicで修飾されていたのであればタグを削除せず元のまま表記します。</p>
+<p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法であっても、引用した文章がBoldやItalicで修飾されていたのであればタグを削除せず元のまま表記します。</p>
 
 <p>本表記ルールはO'Reilly Media, Inc.また株式会社オライリー・ジャパンから出版されている書籍のものを参考にしました。</p>
 
 <h2 id="about">このサイトについて</h2>
 <p>このサイトは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書です。</p>
 
-<p>このサイトに関する批判・議論・指摘・改善案は榎本までメールで連絡してください。本ドメインのHTMLファイルはパブリックドメイン（CC0）で提供するものとします。HTMLファイル内に記載されているコードはライセンスが明記されていない限り、HTMLファイルと同じくCC0で提供します。PDFはちょっと怪しいのでいまのところHTMLファイルに限定しています。引用程度ならまったく問題ありません。</p>
+<p>このサイトに関する批判・議論・指摘・改善案は榎本までメールで連絡してください。本ドメインのHTMLファイルはパブリックドメイン（CC0）で提供するものとします。HTMLファイル内に記載されているコードはライセンスが明記されていない限り、HTMLファイルと同じくCC0とします。PDFはちょっと怪しいのでいまのところHTMLファイルに限定しています。引用程度ならまったく問題ありません。</p>
 
 <p>内容は予告なく変更されます。正確な変更差分や変更日時は<a href="https://github.com/user340/www">https://github.com/user340/www</a>リポジトリから確認できます。</p>
 
