--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <div class="text"><p><b>注意</b></p><p>注意や警告を示します。</p></div>
 </div>
 
-<p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法であっても、引用した文章がBoldやItalicで修飾されていたのであればタグを削除せず元のまま表記します。</p>
+<p>Webページからテキストを引用した場合、引用元の修飾もそのまま残します。つまり上記の表記ルールから逸脱した利用方法でも、引用した文章がBoldやItalicで修飾されていたならタグを削除せず元のまま表記します。</p>
 
 <p>本表記ルールはO'Reilly Media, Inc.また株式会社オライリー・ジャパンから出版されている書籍のものを参考にしました。</p>
 
